--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
     <title>Dashboard</title>
     <style>
       * {
         margin: 0;
-        font-family: 'Open sans', sans-serif;
+        font-family: 'Source sans pro', sans-serif;
       }
     </style>
   </head>
